[gd_scene load_steps=3 format=2]

[ext_resource path="res://Menu/Options/KeyBinder.gd" type="Script" id=1]
[ext_resource path="res://Fonts/Text.tres" type="DynamicFont" id=2]

[node name="KeyBinder" type="HBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -704.0
margin_bottom = -576.0
rect_min_size = Vector2( 340, 0 )
script = ExtResource( 1 )

[node name="Label_ActionName" type="Label" parent="."]
margin_top = 3.0
margin_right = 140.0
margin_bottom = 21.0
rect_min_size = Vector2( 140, 0 )
custom_fonts/font = ExtResource( 2 )
text = "Climb down"

[node name="Label_CurrentBinding" type="Label" parent="."]
margin_left = 144.0
margin_top = 3.0
margin_right = 244.0
margin_bottom = 21.0
rect_min_size = Vector2( 100, 0 )
custom_fonts/font = ExtResource( 2 )
text = "Escape"

[node name="Button" type="Button" parent="."]
margin_left = 248.0
margin_right = 332.0
margin_bottom = 24.0
rect_min_size = Vector2( 60, 0 )
custom_fonts/font = ExtResource( 2 )
text = "Rebind"
flat = true

[connection signal="pressed" from="Button" to="." method="_rebind_pressed"]
